# banditsflow

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
banditsflow/: __init__.py  __main__.py  actor.py  data.py  logger.py  optimizer.py  reporter.py  runner.py  scaffold.py  scenario.py  simulator.py  suggestion.py
banditsflow/templates/: Makefile.txt  __main__.py.txt
banditsflow/templates/actor/: loader.py.txt
banditsflow/templates/reporter/: loader.py.txt
banditsflow/templates/scenario/: loader.py.txt
banditsflow/templates/suggestion/: epsilon_greedy.yml.txt  loader.py.txt
tests/: test_optimizer.py  test_runner.py  test_scaffold.py  test_simulator.py  test_suggestion.py
