[tool.poetry]
name = "banditsflow"
version = "0.1.0"
description = ""
authors = ["monochromegane"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
metaflow = "^2.4.8"
mlflow = "^1.22.0"
optuna = "^2.10.0"

[tool.poetry.dev-dependencies]
pysen = {extras = ["lint"], version = "^0.10.1"}
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
