[tool.poetry]
name = "banditsflow"
version = "0.1.7"
description = "A building workflow and tracking its information framework for bandits."
authors = ["monochromegane"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.7.3"
numpy = "^1.22.1"
metaflow = "^2.4.9"
mlflow = "^1.23.0"
optuna = "^2.10.0"

[tool.poetry.dev-dependencies]
pysen = "^0.10.1"
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
