[tool.poetry]
name = "banditsflow"
version = "0.1.9"
description = "A building workflow and tracking its information framework for bandits."
authors = ["monochromegane"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.8"
numpy = "^1.23.4"
metaflow = "^2.4.9"
mlflow = "^1.23.0"
optuna = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pysen = "^0.10.2"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py310"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
